fixed spacing to be non-adaptive & strict size b/w eachother

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -7,6 +7,10 @@
     background-size: cover;
 }
 
+.galCol {
+    max-width: 275px;
+}
+
 #landingImage {
     background-repeat: no-repeat;
     background-size: cover;
